# app/Http/Requests/RefreshTokenRequest.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+use Illuminate\Http\JsonResponse;
+
+/**
+ * @OA\Schema(
+ *     schema="RefreshRequest",
+ *     type="object",
+ *     @OA\Property(property="token", type="string")
+ * )
+ */
+class RefreshTokenRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'token' => 'required|string'
+        ];
+    }
+
+    /**
+     * @param Validator $validator
+     *
+     * @return void
+     * @throws HttpResponseException
+     */
+    protected function failedValidation(Validator $validator): void
+    {
+        throw new HttpResponseException(
+            new JsonResponse(['errors' => $validator->errors()], 422)
+        );
+    }
+}
