# routes/api.php
@@ -18,6 +18,8 @@ use Illuminate\Support\Facades\Route;
 
 // Login route
 Route::post('/login', [AuthController::class, 'login']);
+Route::post('/refresh', [AuthController::class, 'refresh']);
+Route::post('/register', [AuthController::class, 'register']);
 
 Route::group([
     'middleware' => 'jwt'
